# Oersted

./: .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md  build-eos.sh  build.sh  build_gallery.py
lib/: CMakeLists.txt
src/: CMakeLists.txt
src/Mesh/: CMakeLists.txt
src/Mesh/include/: Mesh.hpp
src/Mesh/src/: Edge.cpp  Edge.h  Mesh.cpp  Mesh.h  Point.cpp  Point.h  util.cpp  util.h
src/Sketch/: CMakeLists.txt
src/Sketch/include/: Sketch.hpp
src/Sketch/src/: Angle.cpp  Angle.h  Branch.cpp  Branch.h  CircularArc.cpp  CircularArc.h  Coincident.cpp  Coincident.h  Constellation.cpp  Constellation.h  Constraint.cpp  Constraint.h  Contour.cpp  Contour.h  Curve.cpp  Curve.h  Distance.cpp  Distance.h  Fixation.cpp  Fixation.h  Horizontal.cpp  Horizontal.h  Length.cpp  Length.h  LineSegment.cpp  LineSegment.h  MirrorCopy.cpp  MirrorCopy.h  Pattern.cpp  Pattern.h  Radius.cpp  Radius.h  RotateCopy.cpp  RotateCopy.h  Rotation.cpp  Rotation.h  Sketch.cpp  Sketch.h  SketchElement.cpp  SketchElement.h  (+14 more)
test/: CMakeLists.txt
test/Mesh/: test_Mesh.cpp  test_Mesh.hpp  util.cpp  util.h
test/Sketch/: test_CircularArc.cpp  test_Constraint.cpp  test_Contour.cpp  test_Curve.cpp  test_LineSegment.cpp  test_MirrorCopy.cpp  test_Pattern.cpp  test_RotateCopy.cpp  test_Sketch.cpp  test_Sketch.h  test_Sketch.hpp  test_Star.cpp  test_Vertex.cpp
test/UseCases/: test_Rotor.cpp  test_Stator.cpp  test_UseCases.hpp
